# advent-of-code_2022

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
advent_of_code/: __init__.py  checks.py  cli_helpers.py  data.py  logger.py  utilities.py
advent_of_code/puzzles/: _template.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py
