[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "advent_of_code"
authors = [{name = "Joshua Cook", email = "joshuacook0023@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "numpy", "matplotlib"
]

[project.urls]
Home = "https://github.com/jhrcook/advent-of-code_2022"

[project.scripts]
aoc = "advent_of_code:app"
